tests/tests_p1/pass/prof/13ok.min
program
	string s := "hello\n"
start
	&s[1]!
end
