tests/tests_p1/fail/prof/37toomanyinit.min
program
	number n := 1, 2
start
	n! "\n"!
end
